--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
-http4k = "5.14.4.0" # http4K releases: https://github.com/http4k/http4k/releases
-slf4j = "2.0.12" # SLF4J releases: http://www.slf4j.org/news.html
+http4k = "5.26.1.0" # http4K releases: https://github.com/http4k/http4k/releases
+slf4j = "2.0.13" # SLF4J releases: http://www.slf4j.org/news.html
+
 
 [libraries]
 http4k-apache = { module = "org.http4k:http4k-server-apache" }
@@ -9,7 +10,8 @@ http4k-core = { module = "org.http4k:http4k-core" }
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
+
 [plugins]
 # Gradle's support for Kotlin: https://docs.gradle.org/current/userguide/compatibility.html
-# Kotlin's support for Gradle https://kotlinlang.org/docs/gradle.html
-kotlin-jvm = { version = "1.9.20", id = "org.jetbrains.kotlin.jvm" }
+# Kotlin's support for Gradle https://kotlinlang.org/docs/gradle-configure-project.html#apply-the-plugin
+kotlin-jvm = { version = "2.0.0", id = "org.jetbrains.kotlin.jvm" }
